python-defaults (2.6.5-2) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2: Create extension symlinks in /usr/lib/pyshared/pythonX.Y
  * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
    debpython module in

  [ Scott Kitterman ]
  * debian/pyversions.py: Exclude python3 versions from results - those are
    handled by py3versions in python3-defaults
  * Update debian/copyright from LICENSE in python2.6 (Closes: #446671)
  * Update debian/python-policy.sgml to cover py3versions, py(3)versions as
    the only defined interface for determining supported/default python
    versions in Debian, and run time separation of python and python3 as two
    distinct systems
  * In debian/python-policy.sgml specify the correct debian/control paragraphs
    for XS/XB-Python-Version (Closes: #567941)
    - Thanks to Loïc Minier for the patch

 -- Matthias Klose <doko@debian.org>  Tue, 08 Jun 2010 18:59:57 -0400

python-defaults (2.6.5-1) experimental; urgency=low

  [ Matthias Klose ]
  * Bump version to 2.6.5.
  * Make python2.6 the default Python version.
  * Build a python-doc package.
  * python: Update the valgrind file to 2.6.

  [ Piotr Ozarowski ]
  * python-minimal: Install pycompile and pyclean binaries.
  * Add lsb-release to Build-Depends
  * Add dh_python2 stuff

 -- Matthias Klose <doko@debian.org>  Fri, 14 May 2010 18:50:21 +0200

python-defaults (2.5.4-9) unstable; urgency=low

  * python-all-dev: Fix typo in dependency list. Closes: #566278.

 -- Matthias Klose <doko@debian.org>  Fri, 22 Jan 2010 18:38:31 +0100

python-defaults (2.5.4-6) unstable; urgency=low

  * Add python2.6 as a supported Python version.
  * python-all{,-dev,-dbg}: Depend on the 2.6 packages.
  * Run the rtinstall script, when 2.5 became a supported version (2.4.4-3)
    and python2.5 is installed.
  * Run the rtinstall script, when 2.6 became a supported version (2.5.4-6)
    and python2.6 is installed. Closes: #565952.