@@ -2,6 +2,8 @@ python-defaults (2.6.5-2) UNRELEASED; urgency=low
 
   [ Piotr Ożarowski ]
   * dh_python2: Create extension symlinks in /usr/lib/pyshared/pythonX.Y
+  * Support for Python3 removed in dh_python2, pycompile and pyclean
+    (moved to python3-defaults) 
   * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
     debpython module in
 
